[gd_scene load_steps=17 format=2]

[ext_resource path="res://Upgrades.gd" type="Script" id=1]
[ext_resource path="res://Images/Buttonsize.PNG" type="Texture" id=2]
[ext_resource path="res://Images/Info/Upgrades.png" type="Texture" id=3]
[ext_resource path="res://Images/Font.tres" type="DynamicFont" id=4]
[ext_resource path="res://Labels.gd" type="Script" id=5]
[ext_resource path="res://Montserrat-ExtraBold.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Images/Info/Plus.png" type="Texture" id=8]
[ext_resource path="res://Images/Info/Minus.png" type="Texture" id=9]
[ext_resource path="res://Buttons.gd" type="Script" id=10]
[ext_resource path="res://Upgrade_Menu/Poison.gd" type="Script" id=11]
[ext_resource path="res://Glue.gd" type="Script" id=12]
[ext_resource path="res://Confuse.gd" type="Script" id=13]
[ext_resource path="res://Ice.gd" type="Script" id=14]
[ext_resource path="res://Triple.gd" type="Script" id=15]

[sub_resource type="DynamicFont" id=1]
size = 50
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=2]
size = 50
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[node name="Upgrades" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="background" type="TextureRect" parent="."]
margin_left = -0.793686
margin_top = 1.5874
margin_right = 1279.21
margin_bottom = 721.587
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="TextureButton" parent="."]
margin_left = 1203.46
margin_right = 1279.46
margin_bottom = 75.0
texture_normal = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Labels" type="Control" parent="."]
margin_left = 312.0
margin_top = -32.262
margin_right = 972.0
margin_bottom = -32.262
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bullet_Upgrades" type="Label" parent="Labels"]
margin_top = 172.0
margin_right = 660.0
margin_bottom = 210.0
custom_fonts/font = ExtResource( 4 )
text = "Bullet Upgrades"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Triple" type="Label" parent="Labels"]
margin_top = 217.859
margin_right = 660.0
margin_bottom = 255.859
custom_fonts/font = ExtResource( 4 )
text = "Triple Shot %"
script = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Triple2" type="Label" parent="Labels/Triple"]
margin_left = 484.698
margin_top = 0.191162
margin_right = 505.698
margin_bottom = 38.1912
custom_fonts/font = ExtResource( 4 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Plus" type="TextureButton" parent="Labels/Triple"]
visible = false
margin_left = 572.0
margin_top = 3.23566
margin_right = 600.0
margin_bottom = 31.2357
texture_normal = ExtResource( 8 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Minus" type="TextureButton" parent="Labels/Triple"]
visible = false
margin_left = 535.661
margin_top = 3.0
margin_right = 564.661
margin_bottom = 32.0
texture_normal = ExtResource( 9 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Poison" type="Label" parent="Labels"]
margin_top = 256.0
margin_right = 660.0
margin_bottom = 294.0
custom_fonts/font = ExtResource( 4 )
text = "Poison %"
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Poison2" type="Label" parent="Labels/Poison"]
margin_left = 484.698
margin_top = 0.191162
margin_right = 505.698
margin_bottom = 38.1912
custom_fonts/font = ExtResource( 4 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Plus" type="TextureButton" parent="Labels/Poison"]
visible = false
margin_left = 572.0
margin_top = 3.23566
margin_right = 600.0
margin_bottom = 31.2357
texture_normal = ExtResource( 8 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Minus" type="TextureButton" parent="Labels/Poison"]
visible = false
margin_left = 535.661
margin_top = 3.0
margin_right = 564.661
margin_bottom = 32.0
texture_normal = ExtResource( 9 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Glue" type="Label" parent="Labels"]
margin_top = 298.379
margin_right = 660.0
margin_bottom = 336.379
custom_fonts/font = ExtResource( 4 )
text = "Glue %"
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Glue2" type="Label" parent="Labels/Glue"]
margin_left = 484.698
margin_top = 0.191162
margin_right = 505.698
margin_bottom = 38.1912
custom_fonts/font = ExtResource( 4 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Plus" type="TextureButton" parent="Labels/Glue"]
visible = false
margin_left = 572.0
margin_top = 3.23566
margin_right = 600.0
margin_bottom = 31.2357
texture_normal = ExtResource( 8 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Minus" type="TextureButton" parent="Labels/Glue"]
visible = false
margin_left = 535.661
margin_top = 3.0
margin_right = 564.661
margin_bottom = 32.0
texture_normal = ExtResource( 9 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Confuse" type="Label" parent="Labels"]
margin_top = 338.638
margin_right = 660.0
margin_bottom = 376.638
custom_fonts/font = ExtResource( 4 )
text = "Confusion %"
script = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Confuse2" type="Label" parent="Labels/Confuse"]
margin_left = 484.698
margin_top = 0.191162
margin_right = 505.698
margin_bottom = 38.1912
custom_fonts/font = ExtResource( 4 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Plus" type="TextureButton" parent="Labels/Confuse"]
visible = false
margin_left = 572.0
margin_top = 3.23566
margin_right = 600.0
margin_bottom = 31.2357
texture_normal = ExtResource( 8 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Minus" type="TextureButton" parent="Labels/Confuse"]
visible = false
margin_left = 535.661
margin_top = 3.0
margin_right = 564.661
margin_bottom = 32.0
texture_normal = ExtResource( 9 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ice" type="Label" parent="Labels"]
margin_top = 375.719
margin_right = 660.0
margin_bottom = 413.719
custom_fonts/font = ExtResource( 4 )
text = "Ice %"
script = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ice2" type="Label" parent="Labels/Ice"]
margin_left = 484.698
margin_top = 0.191162
margin_right = 505.698
margin_bottom = 38.1912
custom_fonts/font = ExtResource( 4 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Plus" type="TextureButton" parent="Labels/Ice"]
visible = false
margin_left = 572.0
margin_top = 3.23566
margin_right = 600.0
margin_bottom = 31.2357
texture_normal = ExtResource( 8 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Minus" type="TextureButton" parent="Labels/Ice"]
visible = false
margin_left = 535.661
margin_top = 3.0
margin_right = 564.661
margin_bottom = 32.0
texture_normal = ExtResource( 9 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Upgrade_Points" type="Label" parent="Labels"]
margin_left = 496.0
margin_top = 103.262
margin_right = 560.0
margin_bottom = 167.262
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.0941176, 0.541176, 0, 1 )
text = "$"

[node name="Label" type="Label" parent="Labels/Upgrade_Points"]
margin_left = 41.3032
margin_top = -1.33482
margin_right = 81.3032
margin_bottom = 60.6652
custom_fonts/font = SubResource( 2 )
text = "E"

[node name="Buttons" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[connection signal="pressed" from="Quit" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="Labels/Triple/Plus" to="Labels/Triple" method="_on_Plus_pressed"]
[connection signal="pressed" from="Labels/Triple/Minus" to="Labels/Triple" method="_on_Minus_pressed"]
[connection signal="pressed" from="Labels/Poison/Plus" to="Labels/Poison" method="_on_Plus_pressed"]
[connection signal="pressed" from="Labels/Poison/Minus" to="Labels/Poison" method="_on_Minus_pressed"]
[connection signal="pressed" from="Labels/Glue/Plus" to="Labels/Glue" method="_on_Plus_pressed"]
[connection signal="pressed" from="Labels/Glue/Minus" to="Labels/Glue" method="_on_Minus_pressed"]
[connection signal="pressed" from="Labels/Confuse/Plus" to="Labels/Confuse" method="_on_Plus_pressed"]
[connection signal="pressed" from="Labels/Confuse/Minus" to="Labels/Confuse" method="_on_Minus_pressed"]
[connection signal="pressed" from="Labels/Ice/Plus" to="Labels/Ice" method="_on_Plus_pressed"]
[connection signal="pressed" from="Labels/Ice/Minus" to="Labels/Ice" method="_on_Minus_pressed"]
